@@ -98,7 +98,7 @@
         <cglib_version>2.2</cglib_version>
         <mockito_version>2.23.4</mockito_version>
         <!-- Build args -->
-        <argline>-server -Xms256m -Xmx512m -XX:PermSize=64m -XX:MaxPermSize=128m -Dfile.encoding=UTF-8
+        <argline>-server -Xms256m -Xmx512m -Dfile.encoding=UTF-8
             -Djava.net.preferIPv4Stack=true -XX:MetaspaceSize=64m -XX:MaxMetaspaceSize=128m
         </argline>
         <skip_maven_deploy>false</skip_maven_deploy>
@@ -195,17 +195,6 @@
     </dependencies>
 
     <profiles>
-        <profile>
-            <id>test</id>
-            <activation>
-                <file>
-                    <missing>.project</missing>
-                </file>
-            </activation>
-            <modules>
-                <module>dubbo-test</module>
-            </modules>
-        </profile>
         <profile>
             <id>checkstyle</id>
             <activation>
